fix box overflow styling

--- a/apps/groups/components/groups/proposals/Proposal.module.css
+++ b/apps/groups/components/groups/proposals/Proposal.module.css
@@ -1,6 +1,13 @@
 .box {
   composes: box from 'chora/styles/box.css';
-  overflow-x: scroll;
+  overflow: hidden;
+}
+
+@media (max-width: 850px) {
+  .box {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
 }
 
 .boxOptions {
